# StarkSystem

./: .editorconfig  .gitignore  Cargo.toml  README.md
solar/: Cargo.toml  build.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  package.rs  repo.rs
solar-buildenv/: Dockerfile
solarsuite/: CMakeLists.txt  Cargo.toml  Main.cpp
solarsuite/bengal/: solarsuite.bl
solarsuite/examples/: example-package.solar
solarsuite/src/: interpreter.rs  lib.rs  package.rs  starlark_dialect.rs
