[package]
name = "solar"
version = "0.1.0"
edition = "2021"
description = "Solar Linux Package Manager"
license = "MIT"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
tar = "0.4"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP client for downloading packages (using rustls for TLS)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Filesystem and utilities
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
tar = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Path handling
path-absolutize = "3.1"

# Solarsuite (internal crate for Starlark-based package definitions)
solarsuite = { path = "../solarsuite", version = "0.1.0" }

[lib]
name = "solar"
path = "lib.rs"

[[bin]]
name = "solar"
path = "main.rs"
