[package]
name = "solarsuite"
version = "0.1.0"
edition = "2021"
description = "Solar Suite - Starlark-based package definition interpreter"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Starlark parser
starlark = "0.13"
starlark_syntax = "0.13"
